--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ test.py
 results/hiddenstate.csv
 results/input_current.csv
 results/input_theory.csv
-receiving_neuron.ipynb
+receiving neuron.ipynb
 .ipynb_checkpoints
