--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 __pycache__/
 code/__pycache__/
 test.py
-results/hiddenstate.csv
-results/input_current.csv
-results/input_theory.csv
+results/*
+results/plotter.py
 receiving neuron.ipynb
 .ipynb_checkpoints
